 * Fixed an issue where formation units weren't being displayed as such in tile logs
 * Fixed an issue in tile logs where a half built/broken block being destroyed would display something along the lines of "build1"
 * Fixed an issue with the coordinate highlighter which allowed players to kick client users by typing very large numbers
 * Pressing escape will now close the player list if it is open
 * Completely reworked virus warnings, they should now always trigger on real viruses and never trigger on non viruses
 * Added a  indicator when placing a drill, it shows the drill speed when coolant is added
 * Added !fixpower, connects grids together as well as buildings without power, doesn't connect across diodes or plastanium walls
 * Added a setting for mobile ui, I don't know why you would ever want this on pc but here you go
 * Added a bar to menders showing when they will mend again
 * Disabled stupid vote reminders on .io, they are annoying and do nothing beneficial for anyone
 * Added a button to toggle between searching for lobbies by region and globally on steam
 * Added MinePath, bound to K by default
 * Fixed a bug with logic virus detection
 * Probably more stuff I forgot

# Version 7.2.1
 * Fixed dialogs being weird
 * Added timestamps to tile hud as well as the tile info menu
 * Added enemy spawns as pathfinding obstacles
 * Increased the number of items displayed on the tilehud to 7 to make it line up with the minimap
 * Moved away from old discord presence library
 * Added partial Russian support (thanks to thedimas3007)

# Version 7.2.0
 * Fixed the unlock all achievements button
 * Fixed the mono font disable option not disabling it everywhere
 * Fixed join messages spamming on world load
 * Fixed the message block networking system not working at all
 * Fixed break tile logs
 * Disabled the mono font by default when the game is being run in a language other than english (some characters aren't in the font)