@@ -61,6 +61,7 @@ client.command.tp.description = Teleports to (x, y) or the last coordinates post
 client.command.here.description = Prints your location to chat with an optional message
 client.command.cursor.description = Prints cursor location to chat with an optional message
 client.command.builder.description = Starts a build path with optional arguments, prioritized from first to last
+client.command.miner.description = Starts a mine path with optional arguments, prioritized based on core item count
 client.command.!.description = Lets you start messages with an !
 client.command.shrug.description = Sends the shrug unicode emoji with an optional message
 client.command.login.description = Used for CN. [scarlet]Don't use this if you care at all about security
@@ -93,6 +94,8 @@ client.path.followrepeat = Follow Recorded Path And Repeat
 client.path.stopfollowing = Stop Following Path
 client.path.builder.invalid = [scarlet]Invalid option: {0}
 client.path.builder.allinvalid = [scarlet]No valid options specified, defaulting to self.\nValid options: {0}
+client.path.miner.allinvalid = [scarlet]No valid items, defaulting to copper, lead, titanium, thorium.
+client.path.miner.mining = [accent]Mining: {0}
 
 
 credits.text = Created by [royal]Anuken[] - [sky]anukendev@gmail.com[]
@@ -972,9 +975,9 @@ setting.showuserid.name = Display User IDs In Player List[lightgray] (hold SHIFT
 
 setting.controls.category = Controls & Behavior
 setting.blockreplace.name = Automatic Block Placement Modifiers[lightgray] (hold SHIFT to invert)[]
+setting.instantturn.name = Instantly Turn Units
 setting.autoboost.name = Auto Boost For Ground Units[lightgray] (hold BOOST key to invert)[]
 setting.assumeunstrict.name = Assume Server Isn't In Strict Mode[lightgray] (attempts to teleport when pathing, won't work on most servers)[]
-setting.instantturn.name = Instantly Turn Units
 
 setting.graphics.category = Graphics & Appearance
 setting.minzoom.name = Minimum Zoom Cap[lightgray] (lower means you can zoom out further)[]
