@@ -181,6 +181,10 @@ object Client {
             Navigation.follow(BuildPath(if (args.isEmpty()) "" else args[0]))
         } // TODO: This is so scuffed lol
 
+        register("miner [options...]", Core.bundle.get("client.command.miner.description")) { args, _: Player ->
+            Navigation.follow(MinePath(if (args.isEmpty()) "" else args[0]))
+        } // TODO: This is so scuffed lol
+
         register(" [message...]", Core.bundle.get("client.command.!.description")) { args, _ ->
             Call.sendChatMessage("!" + if (args.size == 1) args[0] else "")
         }
