@@ -335,9 +335,9 @@ public class SettingsMenuDialog extends SettingsDialog{
 
         client.category("controls");
         client.checkPref("blockreplace", true);
+        client.checkPref("instantturn", true);
         client.checkPref("autoboost", false);
         client.checkPref("assumeunstrict", false);
-        client.checkPref("instantturn", true);
 
         client.category("graphics");
         client.sliderPref("minzoom", 0, 0, 100, s -> Strings.fixed(Mathf.pow(10, 0.0217f * s) / 100f, 2) + "x");
